push final code

--- a/app.json
+++ b/app.json
@@ -4,23 +4,26 @@
     "slug": "ntrwf",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*", "assets/images/*", "src/Assets/Images/*"],
     "ios": {
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logo.png",
+      "enableDangerousExperimentalLeanBuilds": true
+    },
+    "android": {
+      "package": "com.ntrwf.ntrwfapp",
+      "versionCode": 1
     }
   }
 }
