--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^2.3.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-reanimated": "^1.13.1",
