--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   "dependencies": {
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.6",
     "@react-navigation/bottom-tabs": "^5.9.1",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.2",
-    "expo-image-picker": "~8.3.0",
+    "expo-firebase-recaptcha": "^1.2.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^7.19.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-elements": "^2.3.2",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-reanimated": "^1.13.1",
@@ -33,7 +35,7 @@
     "react-native-skeleton-content": "^1.0.20",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "@react-native-community/picker": "1.6.6"
+    "react-native-webview": "^10.10.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
