--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-skeleton-content": "^1.0.20",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^10.10.0"
+    "react-native-webview": "^10.10.0",
+    "expo-notifications": "~0.7.2",
+    "expo-document-picker": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
