--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "^10.10.0",
     "expo-notifications": "~0.7.2",
-    "expo-document-picker": "~8.4.0"
+    "expo-document-picker": "~8.4.0",
+    "expo-av": "~8.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
